--- a/templates/about.html
+++ b/templates/about.html
@@ -5,12 +5,43 @@ About
 {% endblock %}
 
 {% block header %}
+<br>
+<br>
+<div class="row">
+  <div class="col-sm-12" style="background-color:#17A2B8;">
+    <center>
+      <h1>
+	"WHO ARE WE?"
+	<br>
+	Σector!
+      </h1>
+    </center>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12" style="background-color:white;">
+    <br>
+    <br>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12" style="background-color:#FFD700;">
+    <h5>
+      <center>
+	Our name actually has deep roots in our original idea: pizza. Yes, it sounds absurd, but think about it. Pizzas are circles cut into slices. Pie charts are circles cut into slices. We thought "Hey! The two connect!". While we were brainstorming ideas, we were asked our team name. Naturally we chose sector as we liked the idea of slices (and we happily ate pizza!). Our project's pie chart's slices mean something important though. Each sector area is proportional to their respective dataset’s 'population' related to the summation of all the dataset. Hence where the 'Σ' comes in, which means to summate. By no means does this about page cover everything, but it's enough to sate your curiosity of the most important question, right?
+	<br>
+	<br>
+	<br>
+	Oh, and our datasets are totally legit:
+	<br>
+	<br>
+	<a href="https://data.worldbank.org/indicator/SP.POP.TOTL">Population States by Census</a> |
+	<a href="https://www.ssa.gov/OACT/babynames/">Baby Names by Social Security Administration</a> |
+	<a href="https://www.kaggle.com/nadintamer/top-tracks-of-2017/data">Spotify Stats compiled by Kaggle</a>
+      </center>
+    </h5>
+  </div>
+</div>
 {% endblock %}
-
-{% block content %}
-<p>Hello World!</p>
-<p>asdf</p>
-<p>oof</p>
-
-<h1 id="oh">final frontier<h1>
-    {% endblock %}
