--- a/templates/search.html
+++ b/templates/search.html
@@ -11,8 +11,8 @@ Search Results
 <table>
   {% for i in results %}
   <tr>
-    <td>{{i[0]}}</td>
-    <td>{{i[1]}}</td>
+    <td>{{i[0]}}</td> &nbsp;
+    <td>{{i[1]}}</td> &nbsp;
     <td>{{i[2]}}</td>
   </tr>
   {% endfor %}
