--- a/templates/search.html
+++ b/templates/search.html
@@ -11,11 +11,16 @@ Search Results
 <table>
   {% for i in results %}
   <tr>
-    <td>{{i[0]}}</td> &nbsp;
-    <td>{{i[1]}}</td> &nbsp;
+    <td>{{i[0]}}</td> 
+    <td>&nbsp;&nbsp;</td> 
+    <td>{{i[1]}}</td>
+    <td>&nbsp;&nbsp;</td> 
     <td>{{i[2]}}</td>
   </tr>
   {% endfor %}
 </table>
+<br>
+<br>
+<br>
 
 {% endblock %}
