--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@ Home
 {% block content %}
 <div class="container">
   <p>
-    Select one of the following datasets to be quizzed on, a time limit, and the number of items. You will be presented with a quiz where you must guess the top entires in that dataset. As you continue through, you will see the graphs come to life.
+    Select one of the following datasets to be quizzed on, a time limit, and the number of items. You will be presented with a quiz where you must guess the top entires in that dataset. As you continue through, you will see the graphs come to life. Enjoy!
     <div class="row">
       <div class="col-sm-5" style="background-color:#17A2B8;">
 	Choose Your Time (seconds)
@@ -65,7 +65,7 @@ Home
     <br>
     <div class="row">
       <div class="col-sm-4" style="background-color:#FFD700;">
-	<center>World population by country according to a 2016 census</center>
+	<center>World population by Country According to a 2016 Census</center>
 	<br>
 	<center>
           <button type="button" class="btn btn-info" value="1">World Population</button>
@@ -73,13 +73,13 @@ Home
 	<hr/>
       </div>
       <div class="col-sm-4" style="background-color:#17A2B8;">
-	<center>Most popular male and female baby names in 2008</center>
+	<center>Most Popular Male and Female baby names in 2008</center>
 	<br>
         <button type="button" class="btn btn-warning" value="2" style="float: left;">Male</button>
 	<button type="button" class="btn btn-warning" value="3" style="float: right;">Female</button>
       </div>
       <div class="col-sm-4" style="background-color:#FFD700;">
-	<center>The most dancible songs of 2017 according to Spotify</center>
+	<center>The Most Dancible songs of 2017 according to Spotify</center>
 	<br>
 	<center>
           <button type="button" class="btn btn-info" value="4">Songs</button>
@@ -88,7 +88,7 @@ Home
       </div>
       <div class="col-sm-12" style="background-color:#FFD700;">
 	
-	<center>Change in world population by country from 1960 to 2016</center>
+	<center>Change in World Population by Country from 1960 to 2016</center>
 	<br>
 	<center>
           <button type="button" class="btn btn-info" value="5">Change in Population</button>
